[gd_scene load_steps=8 format=3 uid="uid://lhuio0txdrec"]

[ext_resource type="Script" path="res://scenes/appointment_card.gd" id="1_yqjxb"]
[ext_resource type="FontFile" uid="uid://cgxi82mnvgbsg" path="res://fonts/Roboto/Roboto-Black.ttf" id="2_0bkof"]
[ext_resource type="StyleBox" uid="uid://dbig5rwjuc5do" path="res://scenes/dog_profile.tres" id="3_va0i3"]
[ext_resource type="Texture2D" uid="uid://bgd5bn0hkyo54" path="res://xUI_button.png" id="4_qlr6x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ncaf"]
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sm0n4"]
texture = ExtResource("4_qlr6x")
modulate_color = Color(1, 0.231373, 0.72549, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gpayu"]
texture = ExtResource("4_qlr6x")
modulate_color = Color(0.235294, 0, 0.152941, 1)

[node name="appointment_card" type="Control"]
modulate = Color(0.941176, 0.556863, 0, 1)
custom_minimum_size = Vector2(270, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 262.0
offset_bottom = 124.0
script = ExtResource("1_yqjxb")

[node name="bgPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7ncaf")

[node name="vcon" type="VBoxContainer" parent="bgPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 27.0
offset_right = -13.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2

[node name="service_name" type="RichTextLabel" parent="bgPanel/vcon"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_0bkof")
theme_override_font_sizes/normal_font_size = 12
text = "Service Name: "

[node name="date_boarded" type="RichTextLabel" parent="bgPanel/vcon"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_0bkof")
theme_override_font_sizes/normal_font_size = 12
text = "Service Name: "

[node name="date_offloaded" type="RichTextLabel" parent="bgPanel/vcon"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_0bkof")
theme_override_font_sizes/normal_font_size = 12
text = "Service Name: "

[node name="delete_button" type="Button" parent="."]
layout_mode = 0
offset_left = 156.0
offset_top = 118.0
offset_right = 220.0
offset_bottom = 149.0
theme_override_fonts/font = ExtResource("2_0bkof")
theme_override_styles/normal = ExtResource("3_va0i3")
theme_override_styles/hover = SubResource("StyleBoxTexture_sm0n4")
theme_override_styles/pressed = SubResource("StyleBoxTexture_gpayu")
text = "delete?"

[connection signal="pressed" from="delete_button" to="." method="_on_delete_button_pressed"]
